[tool.poetry]
name = "aiocflib"
version = "3.0.0"
description = "Python async API for Crazyflie drones"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
license = "GPL-3.0-or-later"
packages = [{ include = "aiocflib", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
anyio = ">=3.2.1,<5"
outcome = "^1.0.1"
pyusb = "^1.0.2"
colorama = ">=0.4.3"
hexdump = "^3.3"
colour = ">=0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
coverage = { extras = ["toml"], version = "^7.3" }
pytest-cov = "^4.1.0"
tox = "^4.0.0"
trio = ">=0.22.0"
tqdm = "^4.48.0"

[tool.poetry.extras]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
ignore = ["B905", "C901", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
