[tool.poetry]
name = "aiocflib"
version = "4.0.0"
description = "Python async API for Crazyflie drones"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
license = "GPL-3.0-or-later"
packages = [{ include = "aiocflib", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "^4.1.0"
outcome = "^1.3.0.post0"
pyusb = "^1.2.1"
colorama = "^0.4.6"
hexdump = "^3.3"
colour = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = { extras = ["toml"], version = "^7.3.2" }
pytest-cov = "^4.1.0"
tox = "^4.11.4"
trio = "^0.23.1"
tqdm = "^4.66.1"

[tool.poetry.extras]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
ignore = ["B905", "C901", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
