[project]
name = "aiocflib"
version = "4.1.0"
description = "Python async API for Crazyflie drones"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com>" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
  "anyio>=4.1.0",
  "outcome>=1.3.0.post0",
  "pyusb>=1.2.1",
  "colorama>=0.4.6",
  "hexdump>=3.3",
  "colour>=0.1.5",
  "exceptiongroup>=1.2.0 ; python_version < '3.11'",
]

[dependency-groups]
dev = [
  "pytest>=7.4.3",
  "coverage[toml]>=7.3.2",
  "pytest-cov>=4.1.0",
  "tox>=4.11.4",
  "trio>=0.23.1",
  "tqdm>=4.66.1",
  "libusb-package>=1.0.26.3",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
